# abhiyaan-team-s

./: .gitignore  CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
launch/: README.md  bot.launch  igvc_bot_gazebo.launch  igvc_bot_gazebo_fake_obstacle.launch  lanes_test.launch  spawn.launch  world.launch
launch/helper/: gazebo.launch  localisation.launch  spawn.launch
models/construction_barrel/: model.config  model.sdf
models/construction_barrel/materials/scripts/: construction_barrel.material
models/meshes/: castors1.dae
params/: base_local_planner.yaml  costmap_common.yaml  costmap_common_fake_obstacle.yaml  costmap_global.yaml  costmap_local.yaml  ekf_localization.yaml  gmapping.yaml  lanes_mono.yaml  move_base.yaml  navsat.yaml
params/new_param/: base_local_planner1.yaml  costmap_common_fake_obstacle.yaml  costmap_global.yaml  costmap_local.yaml  lanes_mono1.yaml
rviz/: lanes_test.rviz  view_robot.rviz
scripts/: fake_obstacle.py  send_waypoints.py
src/lanes/: lanes_mono.cpp
urdf/: igvc_bot.urdf  igvc_bot2.urdf
worlds/: igvc.world  igvc_2.world  igvc_ramp.world
