<?xml version="1.0"?>
<package format="2">
    <name>igvc_bot</name>
    <version>0.0.0</version>
    <description>The igvc_bot package</description>

    <maintainer email="sachi@todo.todo">sachi</maintainer>


    <license>GPLv3</license>
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>sensor_messages</build_depend>
    <build_depend>stereo_messages</build_depend>

    <depend>controller_manager</depend>
    <depend>gazebo_ros</depend>
    <depend>joint_state_publisher</depend>
    <depend>robot_state_publisher</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>hector_gazebo_plugins</depend>
    <depend>stereo_image_proc</depend>
    <depend>visual_opencv</depend>

    <exec_depend>rviz</exec_depend>


</package>
